[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Anton Danilov <anton2009danilov@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
